# AI_Data_Enginner_Copilot

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 21783c690530_create_schema_relationships_table.py  9b5e6a582194_create_schema_tables_and_columns.py  a2b8d4f7c1e9_create_ai_provider_configs_table.py  a7c2e0f4d8b1_encrypt_connection_passwords.py  b3d9f1a2c6e4_add_relationship_schema_columns.py  b7d3e9a1f4c6_add_is_active_to_ai_provider_configs.py  c0fd676f2c3e_create_connections_table.py  d4e8a1f6c9b3_add_connection_extra_config.py  e5f7b2a9d1c4_create_sync_jobs_table.py  f1a6c3e8b2d7_add_trigram_search_indexes.py  f3a1c9d5b6e2_create_metadata_changes_table.py
app/: __init__.py  main.py
app/api/: __init__.py  ai_providers.py  connections.py  documentation.py  health.py  jobs.py  metadata.py  metadata_refresh.py  qa.py  relationship.py  schema.py  search.py
app/connectors/: base.py  cache.py  factory.py  postgres_connector.py
app/core/: __init__.py  celery_app.py  config.py  database.py  error_handlers.py  logging.py  monitoring.py  security.py
app/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  grok_provider.py  groq_provider.py  openai_provider.py
app/middleware/: request_logging.py
app/models/: __init__.py  ai_provider_config.py  connection.py  metadata_change.py  schema_column.py  schema_relationship.py  schema_table.py  sync_job.py
docs/: phase-1-step-1.md
nginx/: nginx.conf
(+52 files in other folders)
