[project]
name = "ai-data-enginner-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.1",
    "anthropic>=0.116.0",
    "celery>=5.6.3",
    "cryptography>=49.0.0",
    "fastapi>=0.111.0",
    "google-genai>=2.11.0",
    "openai>=2.45.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.30.0",
]
